--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "pg": "^8.12.0",
     "sequelize": "^6.37.3",
     "swagger-autogen": "^2.23.7",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "yup": "^1.4.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4",
