Ajuste no script start no package.json e criação de Dockerfile e docker-compose

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:prod": "node src/index.js",
+    "start": "node src/index.js",
     "start:dev": "nodemon src/index.js",
     "swagger": "node ./autoGen.swagger.js"
   },
